# Simulated-Annealing-Power-Planning

./: .gitignore  .gitlab-ci.yml  README.md  ci.yml
cc_msgs/: CMakeLists.txt  package.xml
cc_msgs/msg/: BatteryLevel.msg  ChargeLevel.msg  PowerLevel.msg
cc_msgs/srv/: LoadProfile.srv
power_energy_propogation/: .flake8  CMakeLists.txt  mypy.ini  package.xml
power_energy_propogation/data/: august_power_avg_15.csv  dc_average_by_time.csv
power_energy_propogation/include/power_energy_propogation/: beat.hpp  data_struct.hpp  planner.hpp  power_node.hpp  power_solution.hpp
power_energy_propogation/launch/: planner_test.launch.py
power_energy_propogation/scripts/: external_load_gen.py  filter_solutions_node.py  plotter_node.py
power_energy_propogation/src/: planner.cpp  power_node.cpp  power_solution.cpp
power_energy_propogation/test/: main.cpp  test_battery_aggregate.cpp
